[package]
name = "sms-2dm"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits = "0.2.17"
serde = { version = "1.0.193", optional = true, features = ["derive"] }
thiserror = "1.0.50"

[lints]
rust.elided_lifetimes_in_paths = "warn"
clippy.enum_glob_use = "warn"

[dev-dependencies]
anyhow = "1.0.75"
