[package]
name = "sms-2dm"
version = "0.1.0"
authors = ["cyqsimon <28627918+cyqsimon@users.noreply.github.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/cyqsimon/sms-2dm-rs"
description = "A low-level parser for Aquaveo™️'s `.2dm` format"

[dependencies]
num-traits = "0.2.17"
serde = { version = "1.0.193", optional = true, features = ["derive"] }
thiserror = "1.0.50"

[lints]
rust.elided_lifetimes_in_paths = "warn"
clippy.enum_glob_use = "warn"

[dev-dependencies]
anyhow = "1.0.75"
