[package]
name = "sms-2dm"
version = "0.2.0"
authors = ["cyqsimon <28627918+cyqsimon@users.noreply.github.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/cyqsimon/sms-2dm-rs"
description = "A low-level parser for Aquaveo™️'s `.2dm` format"

[features]
default = ["warn"]

# Enable strict assertions. Anything that is not strictly-compliant will cause a hard error.
strict = []

# Log a warning for anything that is not strictly-compliant.
# Can be used together with `strict`.
warn = ["log"]

[dependencies]
log = { version = "0.4.20", optional = true }
num-traits = "0.2.17"
paste = "1.0.14"
serde = { version = "1.0.193", optional = true, features = ["derive"] }
thiserror = "2"

[lints]
rust.elided_lifetimes_in_paths = "warn"
clippy.enum_glob_use = "warn"

[dev-dependencies]
anyhow = "1.0.75"
